Publish the server charm (#106)
* Publish the charm

* Fix the server cham path

* Add a metadata.yaml

* Add in metadata.yaml

* Relative path formatting as per requested

* Drop "containers", add "display-name" as per the reviewer suggestion and charmcraft.yaml VS Code plugin suggestion

* Remove title

* Move containers to metadata.yaml

* Removing some more stuff

* Move resources to metadata.yaml

* Some more moving around of fields between yamls

* Some more moving around of fields between yamls

* Correct the upstream-source value

* :main

* Remove "charm-publishing" branch mention

--- a/.github/workflows/publish_server.yml
+++ b/.github/workflows/publish_server.yml
@@ -2,8 +2,8 @@ on:
   push:
     branches: ["main"]
     paths:
-      - 'server/**'
-      - '.github/workflows/publish_server.yml'
+      - "server/**"
+      - ".github/workflows/publish_server.yml"
 
 env:
   REGISTRY: ghcr.io
@@ -50,3 +50,19 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  build-and-push-charm:
+    runs-on: [self-hosted, linux, xlarge, jammy, x64]
+    needs: build-and-push-image
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Upload charm to charmhub
+        uses: canonical/charming-actions/upload-charm@2.4.0
+        with:
+          charm-path: "server/charm"
+          credentials: "${{ secrets.CHARMHUB_TOKEN }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          upload-image: "true"
