Add workflow_dispatch to publish_server workflow

--- a/.github/workflows/publish_server.yml
+++ b/.github/workflows/publish_server.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - "server/**"
       - ".github/workflows/publish_server.yml"
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
