Implement the certification status logic to match the spec (#131)
* Re-implement the logic for certified status
* Add other statuses to match the schema from the spec
* Fix file path in coverage file to display changes in PR correctly

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,21 @@
 FROM python:3.12
 
-WORKDIR /home/code
+WORKDIR /home/server
 EXPOSE 8080
 
-ENV PYTHONPATH=/home/code
+ENV PYTHONPATH=/home/server
 COPY poetry.lock .
 COPY pyproject.toml .
 RUN pip3 install poetry && \
     poetry config virtualenvs.create false && \
     poetry install --no-interaction --no-ansi
 
+RUN apt update && apt install -y sqlite3
+
 COPY . .
 
 ARG IMPORT_TOOL_PATH=./scripts/import_from_c3.py
-ARG DB_URL=sqlite:////home/code/hwapi.db
+ARG DB_URL=sqlite:////home/server/hwapi.db
 ENV DB_URL=$DB_URL
 ARG C3_URL=https://certification.canonical.com
 ENV C3_URL=$C3_URL
