--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   hwapi-dev:
     build:
@@ -6,13 +5,13 @@ services:
       dockerfile: Dockerfile
       args:
         IMPORT_TOOL_PATH: ${IMPORT_TOOL_PATH:-./scripts/import_from_c3.py}
-        DB_URL: ${DB_URL:-sqlite:////home/code/hwapi.db}
+        DB_URL: ${DB_URL:-sqlite:////home/server/hwapi.db}
         C3_URL: ${C3_URL:-https://certification.staging.canonical.com}
     command: uvicorn hwapi.main:app --host 0.0.0.0 --port 8080 --reload
-    working_dir: /home/code
+    working_dir: /home/server
     volumes:
-      - ./hwapi:/home/code/hwapi
-      - ./scripts:/home/code/scripts
+      - ./hwapi:/home/server/hwapi
+      - ./scripts:/home/server/scripts
     ports:
       - "8080:8080"
 
@@ -23,17 +22,18 @@ services:
       args:
         IMPORT_TOOL_PATH: ""
         C3_URL: https://c3_url
-        DB_URL: sqlite:////home/code/test.db
+        DB_URL: sqlite:////home/server/test.db
     command: >
       bash -c '
         black --check hwapi/ scripts/ tests/ &&
         ruff check hwapi/ scripts/ tests/ --no-cache &&
         mypy hwapi/ scripts/ tests/ &&
-        coverage run -m pytest tests/ -vv &&
-        coverage xml -o coverage/coverage.xml'
-    working_dir: /home/code
+        coverage run --source "hwapi/" -m pytest tests/ -vv &&
+        cd .. && cp server/.coverage . &&
+        coverage xml -o server/coverage/coverage.xml'
+    working_dir: /home/server
     volumes:
-      - ./coverage:/home/code/coverage
+      - ./coverage:/home/server/coverage
     ports:
       - "8080:8080"
 
@@ -43,8 +43,8 @@ services:
       dockerfile: Dockerfile
       args:
         IMPORT_TOOL_PATH: ./scripts/import_from_c3.py
-        DB_URL: sqlite:////home/code/hwapi.db
+        DB_URL: sqlite:////home/server/hwapi.db
         C3_URL: https://certification.canonical.com
-    working_dir: /home/code
+    working_dir: /home/server
     ports:
       - "8080:8080"
