--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -5,6 +5,7 @@ license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
 authors = []
+exclude = ["debian/*"]
 
 [dependencies]
 serde_json = "=1.0.103"
