--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -5,10 +5,17 @@ license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
 authors = []
+exclude = ["debian/*"]
+
+[package.metadata.vendor-filter]
+platforms = ["*-unknown-linux-gnu"]
+tier = "2"
+all-features = false
 
 [dependencies]
-serde_json = "=1.0.111"
+serde_json = "=1.0.41"
 once_cell = "=1.19.0"
+openssl = "^0.10.23"
 
 [lib]
 name = "hwlib"
@@ -27,7 +34,7 @@ version = "=1.35.1"
 features = [ "full", "test-util",]
 
 [dependencies.pyo3]
-version = "=0.20.2"
+version = "=0.21.2"
 features = [ "extension-module",]
 
 [package.metadata.deb]
