--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -5,29 +5,36 @@ license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
 authors = []
+exclude = ["debian/*"]
+
+[package.metadata.vendor-filter]
+platforms = ["*-unknown-linux-gnu"]
+tier = "2"
+all-features = false
 
 [dependencies]
-serde_json = "=1.0.103"
-once_cell = "=1.18.0"
+serde_json = "=1.0.41"
+once_cell = "=1.19.0"
+openssl = "^0.10.23"
 
 [lib]
 name = "hwlib"
 crate-type = [ "cdylib", "rlib",]
 
 [dependencies.reqwest]
-version = "=0.11.18"
+version = "=0.11.24"
 features = [ "json",]
 
 [dependencies.serde]
-version = "=1.0.171"
+version = "=1.0.195"
 features = [ "derive",]
 
 [dependencies.tokio]
-version = "=1.29.1"
+version = "=1.35.1"
 features = [ "full", "test-util",]
 
 [dependencies.pyo3]
-version = "=0.19.0"
+version = "=0.21.2"
 features = [ "extension-module",]
 
 [package.metadata.deb]
