--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -27,15 +27,20 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - name: Build with vendored dependencies in offline mode
+      - run: cargo install cargo-vendor-filterer
+      - name: Vendor the dependencies
         run: |
-          echo -e '[source.crates-io]\nreplace-with = "vendored-sources"\n\n[source.vendored-sources]\ndirectory = "'"$PWD"'/client/hwlib/vendor"' > ~/.cargo/config.toml
-          cargo build --offline
+          cd client/hwlib/
+          ./debian/vendor-rust.sh
+          echo -e '[source.crates-io]\nreplace-with = "vendored-sources"\n\n[source.vendored-sources]\ndirectory = "'"$PWD"'/vendor"' > ~/.cargo/config.toml
+      - run: cargo build --offline
       - run: cargo check
-      - run: rustup component add rustfmt
-      - run: cargo fmt --all -- --check
-      - run: rustup component add clippy
-      - run: cargo clippy --all-features --verbose
+      - run: |
+          rustup component add rustfmt
+          cargo fmt --all -- --check
+      - run: |
+          rustup component add clippy
+          cargo clippy --all-features --verbose
       - name: Run cargo test
         run: cargo test -- --test-threads=1
 
