Prepare hwlib for publishing to crates (#155)
* Exclude debian/ dir from publishing to crates

* Add vendored deps

* Vendor dependencies with cargo-vendor-filterer

* Update test_client action to perform the offline package installation

* Create a script for vendoring dependencies locally

* Update test_client action

* Update .gitignore

--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -11,13 +11,7 @@ Build-Depends: debhelper (>= 12),
                libssl-dev,
                pkg-config,
                patchelf,
-               librust-serde-derive-1+default-dev,
-               librust-serde-json-1+default-dev,
-               librust-pyo3-0+default-dev,
-               librust-tokio-1+default-dev,
-               librust-tokio-util-0+default-dev,
-               librust-reqwest-0+default-dev,
-               librust-once-cell-1+default-dev
+               build-essential
 Maintainer: Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net> 
 Uploaders: Nadzeya Hutsko <nadzeya.hutsko@canonical.com>
 Standards-Version: 4.6.1
