--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -21,17 +21,26 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev
+          sudo apt-get install -y pkg-config libssl-dev build-essential
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
+      - run: cargo install cargo-vendor-filterer
+      - name: Vendor the dependencies
+        run: |
+          cd client/hwlib/
+          ./debian/vendor-rust.sh
+          echo -e '[source.crates-io]\nreplace-with = "vendored-sources"\n\n[source.vendored-sources]\ndirectory = "'"$PWD"'/vendor"' > ~/.cargo/config.toml
+      - run: cargo build --offline
       - run: cargo check
-      - run: rustup component add rustfmt
-      - run: cargo fmt --all -- --check
-      - run: rustup component add clippy
-      - run: cargo clippy --all-features --verbose
+      - run: |
+          rustup component add rustfmt
+          cargo fmt --all -- --check
+      - run: |
+          rustup component add clippy
+          cargo clippy --all-features --verbose
       - name: Run cargo test
         run: cargo test -- --test-threads=1
 
@@ -43,7 +52,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev
+          sudo apt-get install -y pkg-config libssl-dev build-essential
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
