Update debian/* files

--- a/client/hwlib/debian/config.toml
+++ b/client/hwlib/debian/config.toml
@@ -1,3 +1,6 @@
+# Use the vendorized sources to produce the Cargo.lock file. This
+# can be performed by pointing $CARGO_HOME to the path containing
+# this file.
 [source.crates-io]
 replace-with = "vendored-sources"
 
