--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -5,7 +5,10 @@ license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
 authors = []
-exclude = ["debian/*"]
+documentation = "https://github.com/canonical/hardware-api/"
+homepage = "https://github.com/canonical/hardware-api/"
+repository = "https://github.com/canonical/hardware-api/"
+exclude = ["debian/*",]
 
 [package.metadata.vendor-filter]
 platforms = ["*-unknown-linux-gnu"]
@@ -15,7 +18,6 @@ all-features = false
 [lib]
 name = "hwlib"
 crate-type = [ "cdylib", "rlib",]
-
 
 [target.'cfg(all(target_os = "linux"))'.dependencies]
 serde_json = "1.0.41"
