--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -6,8 +6,7 @@ Build-Depends: debhelper (>= 12),
                cargo:native,
                rustc:native,
                libssl-dev,
-               pkg-config,
-               build-essential
+               pkg-config
 Maintainer: Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net> 
 Uploaders: Nadzeya Hutsko <nadzeya.hutsko@canonical.com>
 Standards-Version: 4.6.2
@@ -21,8 +20,8 @@ Package: librust-hwlib-dev
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends},
-         ${shlibs:Depends},
-         libssl-dev,
-         pkg-config
+         ${shlibs:Depends}
 Provides: librust-hwlib-dev (= ${binary:Version})
 Description: Collects and sends hardware information to hardware-api to find testing status of the machine
+ This library is used for gathering hardware information from a device and sending it
+ to the hardware-api to determine the testing status of the device model.
