--- a/client/hwlib/debian/rules
+++ b/client/hwlib/debian/rules
@@ -1,11 +1,9 @@
 #!/usr/bin/make -f
 
-export CARGO_VENDOR_DIR := $(CURDIR)/vendor
 export CARGO_HOME=$(CURDIR)/debian/
 
 %:
 	dh $@ --buildsystem cargo
 
 override_dh_auto_test:
-	ls -la
-	/usr/share/cargo/bin/cargo test --offline
+	/usr/share/cargo/bin/cargo test -- --test-threads=1
