--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -34,7 +34,10 @@ jobs:
         run: |
           cd client/hwlib/
           ./debian/vendor-rust.sh
-          echo -e '[source.crates-io]\nreplace-with = "vendored-sources"\n\n[source.vendored-sources]\ndirectory = "'"$PWD"'/vendor"' > ~/.cargo/config.toml
+          echo '[source.crates-io]' >>  ~/.cargo/config.toml
+          echo -e 'replace-with = "vendored-sources"\n' >>  ~/.cargo/config.toml
+          echo '[source.vendored-sources]' >>  ~/.cargo/config.toml
+          echo 'directory = "'"$PWD"'/vendor"' >> ~/.cargo/config.toml
       - run: cargo build --offline
       - run: cargo check
       - run: |
