Update debian directory for hwlib (#169)
* Update debian/* files

* Normalise Cargo.toml

* Remove checksum for .a files

* Add GH CI for testing the hwlib debian build

* Address the comments

* Fix typo in CI

* Exclude only top debian/ and vendor/ dirs from cargo-checksum.json

--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -34,7 +34,13 @@ jobs:
         run: |
           cd client/hwlib/
           ./debian/vendor-rust.sh
-          echo -e '[source.crates-io]\nreplace-with = "vendored-sources"\n\n[source.vendored-sources]\ndirectory = "'"$PWD"'/vendor"' > ~/.cargo/config.toml
+          cat >>~/.cargo/config.toml << __CONFIG__
+          [source.crates-io]
+          replace-with = "vendored-sources"
+          [source.vendored-sources]
+          directory = "$PWD/vendor"
+          __CONFIG__
+          cat ~/.cargo/config.toml
       - run: cargo build --offline
       - run: cargo check
       - run: |
