Fix lintian errors and warnings

--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -55,6 +55,7 @@ jobs:
     - name: Generate checksums
       run: ./debian/generate_checksums.py
     - run: dpkg-buildpackage -us -uc -S
+    - run: lintian --pedantic --verbose
     - name: Setup sbuild and build the package
       run: |
         set -xeu
