--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -61,7 +61,7 @@ jobs:
         set -xeu
         mkdir -p ~/.cache/sbuild
         echo
-        mmdebstrap --variant=buildd --components=main,restricted,universe focal ~/.cache/sbuild/focal-amd64.tar.zst
+        mmdebstrap --variant=buildd --components=main,restricted,universe oracular ~/.cache/sbuild/oracular-amd64.tar.zst
 
         echo "Running sbuild-debian-developer-setup"
         sudo sbuild-debian-developer-setup
@@ -83,4 +83,4 @@ jobs:
           exit 1
         fi
         echo "Running sbuild for $PACKAGE_DSC"
-        sbuild $PACKAGE_DSC -d focal -v
+        sbuild $PACKAGE_DSC -d oracular -v
