--- a/client/.gitignore
+++ b/client/.gitignore
@@ -10,6 +10,11 @@ cargo_home
 vendor/
 __pycache__/
 
+# In a workspace, packages should share the same Cargo.lock file.
+# See https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html for more
+hwlib/Cargo.lock
+hwctl/Cargo.lock
+
 # debian/ source files to ignore
 .debhelper/
 */debian/files
