--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -20,10 +20,10 @@ name = "hwlib"
 crate-type = [ "cdylib", "rlib",]
 
 [target.'cfg(all(target_os = "linux"))'.dependencies]
-serde_json = "1.0.0"
+serde_json = "~1.0.0"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.0", features = [ "json",] }
-serde = { version = "1.0.0", features = [ "derive",] }
+serde = { version = "~1.0.0", features = [ "derive",] }
 tokio = { version = "1.38.0", features = [ "full", "test-util",], default-features = false }
 pyo3 = { version = "0.22.0", features = [ "extension-module",] }
 
