Copy  Cargo.lock file to the hwlib dir while creating the debian archive

--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -48,6 +48,7 @@ jobs:
         profile: minimal
         toolchain: stable
         override: true
+    - run: cp ../../Cargo.lock ./
     - name: Vendor the dependencies
       run: |
         cargo install cargo-vendor-filterer
