--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -20,12 +20,12 @@ name = "hwlib"
 crate-type = [ "cdylib", "rlib",]
 
 [target.'cfg(all(target_os = "linux"))'.dependencies]
-serde_json = "1.0.41"
+serde_json = "~1.0.0"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.0", features = [ "json",] }
-serde = { version = "1.0.104", features = [ "derive",] }
+serde = { version = "~1.0.0", features = [ "derive",] }
 tokio = { version = "1.38.0", features = [ "full", "test-util",], default-features = false }
-pyo3 = { version = "0.21.2", features = [ "extension-module",] }
+pyo3 = { version = "0.22.0", features = [ "extension-module",] }
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
