--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -28,9 +28,10 @@ tokio = { version = "1.38.0", features = [ "full", "test-util",], default-featur
 pyo3 = { version = "0.22.0", features = [ "extension-module",] }
 smbios-lib = "0.9.1"
 regex = "1.10.5"
-
-[dependencies]
 chrono = "0.4.38"
+mockito = "1.4.0"
+tempfile = "3.10.1"
+mockall = "0.13.0"
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
