Fix python bindings tests

--- a/client/hwlib/tox.ini
+++ b/client/hwlib/tox.ini
@@ -10,6 +10,7 @@ deps =
     pytest
     pytest-asyncio
     maturin
+    requests-mock
 commands_pre =
     {envbindir}/maturin develop
 commands =
