--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -69,6 +69,14 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+      - name: Build and start the Docker container
+        working-directory: server
+        run: |
+          echo "IMPORT_TOOL_PATH=./scripts/seed_db.py" >> $GITHUB_ENV
+          docker compose up --attach-dependencies --build -d hwapi-dev
+      - name: Wait for server to be ready
+        run: |
+          sleep 30
       - name: Install tox
         run: |
           pip install tox
