--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -26,15 +26,13 @@ crate-type = [ "cdylib", "rlib",]
 [target.'cfg(all(target_os = "linux"))'.dependencies]
 serde_json = "~1.0.0"
 once_cell = "1.19.0"
-reqwest = { version = "0.12.0", features = [ "json",] }
-serde = { version = "~1.0.0", features = [ "derive",] }
-tokio = { version = "1.38.0", features = [ "full", "test-util",], default-features = false }
-pyo3 = { version = "0.22.0", features = [ "extension-module",] }
+reqwest = { version = "0.12.0", features = ["json"] }
+serde = { version = "~1.0.0", features = ["derive"] }
+tokio = { version = "1.38.0", features = ["full", "test-util"], default-features = false }
+pyo3 = { version = "0.22.0", features = ["extension-module"] }
 smbios-lib = "0.9.1"
 regex = "1.10.5"
-chrono = "0.4.38"
-mockito = "1.4.0"
-project-root = "0.2.2"
+time = { version = "0.3", features = ["macros" ,"parsing", "formatting"]}
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
