--- a/client/hwlib/debian/rules
+++ b/client/hwlib/debian/rules
@@ -4,3 +4,6 @@ export CARGO_HOME=$(CURDIR)/debian/
 
 %:
 	dh $@ --buildsystem cargo
+
+override_dh_auto_test:
+	/usr/share/cargo/bin/cargo test --offline
