--- a/client/hwctl/Cargo.toml
+++ b/client/hwctl/Cargo.toml
@@ -13,4 +13,4 @@ all-features = false
 [target.'cfg(target_os = "linux")'.dependencies]
 tokio = { version = "1.38.0", features = ["full"], default-features = false }
 hwlib = { path = "../hwlib", version = "0.1.0" }
-serde_json = "1.0.120"
+serde_json = "~1.0.0"
