--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -28,7 +28,7 @@ serde_json = "~1.0.0"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.0", features = ["json"] }
 serde = { version = "~1.0.0", features = ["derive"] }
-tokio = { version = "1.38.0", features = ["full", "test-util"], default-features = false }
+tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "test-util"], default-features = false }
 pyo3 = { version = "0.22.0", features = ["extension-module"] }
 smbios-lib = "0.9.1"
 regex = "1.10.5"
