--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -30,9 +30,10 @@ reqwest = { version = "0.12.0", features = ["json"] }
 serde = { version = "~1.0.0", features = ["derive"] }
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "test-util"], default-features = false }
 pyo3 = { version = "0.22.0", features = ["extension-module"] }
-smbios-lib = "0.9.1"
-regex = "1.10.5"
-time = { version = "0.3", features = ["macros" ,"parsing", "formatting"]}
+smbios-lib = "0.9.0"
+regex = "1.10.0"
+time = { version = "~0.3.0", features = ["macros" ,"parsing", "formatting"]}
+anyhow = "~1.0.0"
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
