Add cargo clippy --tests to CI

--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -49,6 +49,7 @@ jobs:
       - run: |
           rustup component add clippy
           cargo clippy --all-features --verbose
+      - run: cargo clippy --tests --verbose
       - name: Run cargo test
         run: cargo test
 
