Use lazy_static to unwrap regex

--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -35,6 +35,7 @@ regex = "1.10.0"
 time = { version = "~0.3.0", features = ["macros" ,"parsing", "formatting"]}
 anyhow = "~1.0.0"
 itertools = "0.13.0"
+lazy_static = "1.5.0"
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
