--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -26,6 +26,12 @@ jobs:
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v4
+    # Prevent lxd-agent from getting restarted on apt upgrades.
+    # https://warthogs.atlassian.net/browse/ISD-2139
+    - name: Disable lxd-agent restart
+      run: |
+        mkdir -p /etc/needrestart/conf.d
+        echo '$nrconf{override_rc}{qr(^lxd-agent.service$)} = 0;' | sudo tee /etc/needrestart/conf.d/lxdagent.conf
     - name: Download dependencies
       run: |
         set -xeu
