--- a/client/hwctl/Cargo.toml
+++ b/client/hwctl/Cargo.toml
@@ -11,5 +11,7 @@ tier = "2"
 all-features = false
 
 [target.'cfg(target_os = "linux")'.dependencies]
-tokio = { version = "1.38.0", features = ["full"], default-features = false }
+tokio = { version = "1.38.0", features = ["rt", "macros"], default-features = false }
 hwlib = { path = "../hwlib", version = "0.1.0" }
+serde_json = "~1.0.0"
+anyhow = "~1.0.0"
