--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -4,7 +4,11 @@ description = "collects and sends hardware information to hwapi to find testing 
 license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
-authors = []
+authors = [
+  "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>",
+  "Nadzeya Hutsko <nadzeya.hutsko@canonical.com>",
+  "Matias Piipari <matias.piipari@canonical.com>",
+]
 documentation = "https://github.com/canonical/hardware-api/"
 homepage = "https://github.com/canonical/hardware-api/"
 repository = "https://github.com/canonical/hardware-api/"
@@ -21,11 +25,16 @@ crate-type = [ "cdylib", "rlib",]
 
 [target.'cfg(all(target_os = "linux"))'.dependencies]
 serde_json = "~1.0.0"
-once_cell = "1.19.0"
-reqwest = { version = "0.12.0", features = [ "json",] }
-serde = { version = "~1.0.0", features = [ "derive",] }
-tokio = { version = "1.38.0", features = [ "full", "test-util",], default-features = false }
-pyo3 = { version = "0.22.0", features = [ "extension-module",] }
+reqwest = { version = "0.12.0", features = ["json"] }
+serde = { version = "~1.0.0", features = ["derive"] }
+tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "test-util"], default-features = false }
+pyo3 = { version = "0.22.0", features = ["extension-module"] }
+smbios-lib = "0.9.0"
+regex = "1.10.0"
+time = { version = "~0.3.0", features = ["macros" ,"parsing", "formatting"]}
+anyhow = "~1.0.0"
+itertools = "0.13.0"
+lazy_static = "1.5.0"
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
