--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,17 +9,17 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.112.0"
 uvicorn = "^0.30.0"
-sqlalchemy = "^2.0.25"
-pydantic = "^2.5.3"
+sqlalchemy = "^2.0.0"
+pydantic = "^2.5.0"
 pyyaml = "^6.0.1"
 requests = "^2.31.0"
-starlette = "0.37.2"
+starlette = "^0.37.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
 ruff = "^0.5.0"
 mypy = "^1.8.0"
-types-pyyaml = "^6.0.12.12"
+types-pyyaml = "^6.0.0"
 pre-commit = "^3.6.0"
 types-requests = "^2.31.0.20240406"
 
