--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev build-essential
+          sudo apt-get install -y pkgconf libssl-dev build-essential
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -61,7 +61,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev build-essential
+          sudo apt-get install -y pkgconf libssl-dev build-essential
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
