Update vendor dir to be rust-vendor/ instead of vendor/

--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -38,7 +38,7 @@ jobs:
           [source.crates-io]
           replace-with = "vendored-sources"
           [source.vendored-sources]
-          directory = "$PWD/vendor"
+          directory = "$PWD/rust-vendor"
           __CONFIG__
           cat ~/.cargo/config.toml
       - run: cargo build --offline
