--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hwlib"
-description = "collects and sends hardware information to hwapi to find testing status of the device model"
+description = "Collects and sends hardware information to hwapi to find testing status of the device model"
 license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
