--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -36,6 +36,9 @@ anyhow = "~1.0.0"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
 
+[target.'cfg(all(target_os = "linux"))'.dev-dependencies]
+mockall = "0.13.0"
+
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
 copyright = "Copyright 2024 Canonical Ltd."
