--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -8,6 +8,7 @@ hwlib = { path = "client/hwlib" }
 tokio = { version = "1.0", features = ["full", "test-util"] }
 anyhow = "1.0"
 simple_test_case = "1.2.0"
+serde_json = "1.0.0"
 
 [[test]]
 name = "integration"
