Update integration tests README.md with tests description

--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: ../server
       dockerfile: Dockerfile
       args:
-        IMPORT_TOOL_PATH: ./scripts/import_test_data_from_c3.py
-        C3_URL: https://certification.canonical.com
+        IMPORT_TOOL_PATH: ./scripts/import_test_data.py
+        C3_URL: https://c3_url
         DB_URL: sqlite:////home/server/test-integration.db
     ports:
       - "8080:8080"
