Make integration tests to be snapshot tests (#247)
* Add request.json and response.json files to the test_data folder

The expected.json files were renamed to request.json. Also, I've added
the response.json files that contains real responses from the current
version of the server

* Fix 'typo' in vendor match logic

Instead of calling `_clean_vendor_name(f"%{vendor_name}%")`, we should
use f"%{_clean_vendor_name(vendor_name).lower()}%"

* Make integration tests to be snapshot tests

The tests make sure that the machines in the client/hwlib/test_data
directory are indicated as certified and the hardware details match.
They currently load data for this machines from C3, but we mock C3
responses with the test data from the server/scripts/c3_test_data
directory before the tests run.

* Update GH CI to use integration-tests/ instead of tests/ directory

* Update integration tests README.md with tests description

--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ../server
       dockerfile: Dockerfile
       args:
-        IMPORT_TOOL_PATH: ""
+        IMPORT_TOOL_PATH: ./scripts/import_test_data.py
         C3_URL: https://c3_url
         DB_URL: sqlite:////home/server/test-integration.db
     ports:
