--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ target
 dist
 cargo-checksum.json
 *.snap
+
+# debian/ source files to ignore
+.debhelper/
+*/debian/files
+*/debian/cargo_registry
+*.deb
+*.ddeb
+*.buildinfo
+*.changes
+*.ppa.upload
+*.dsc
+*.tar.*
+*.dsc
+*.build
+*.log
