--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -20,6 +20,9 @@ concurrency:
 jobs:
   lint-and-test:
     runs-on: [self-hosted, linux, large, jammy, x64]
+    defaults:
+      run:
+        working-directory: client
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
@@ -34,7 +37,6 @@ jobs:
       - run: cargo install cargo-vendor-filterer
       - name: Vendor the dependencies
         run: |
-          cd client/hwlib/
           ./debian/vendor-rust.sh
           cat >>~/.cargo/config.toml << __CONFIG__
           [source.crates-io]
@@ -57,6 +59,9 @@ jobs:
 
   py-bindings-test:
     runs-on: [self-hosted, linux, large, jammy, x64]
+    defaults:
+      run:
+        working-directory: client/hwlib
     needs: lint-and-test
     steps:
       - uses: actions/checkout@v4
@@ -76,6 +81,4 @@ jobs:
         run: |
           pip install tox
       - name: Run tox
-        run: |
-          cd client/hwlib/
-          tox
+        run: tox
