--- a/.github/workflows/publish_server.yaml
+++ b/.github/workflows/publish_server.yaml
@@ -3,7 +3,7 @@ on:
     branches: ["main"]
     paths:
       - "server/**"
-      - ".github/workflows/publish_server.yml"
+      - ".github/workflows/publish_server.yaml"
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0' # Rebuild every Sunday at 00:00
@@ -62,3 +62,4 @@ jobs:
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           upload-image: "true"
+          tag-prefix: "hwapi"
