--- a/client/hwctl/Cargo.toml
+++ b/client/hwctl/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hwctl"
 description = "hwlib backed CLI tool for collecting and sending hardware information to hwapi to find testing status of device models"
 license = "GPL-3.0-only"
-version = "0.1.0"
+version = "0.9.0"
 edition = "2021"
 
 [package.metadata.vendor-filter]
@@ -12,6 +12,6 @@ all-features = false
 
 [target.'cfg(target_os = "linux")'.dependencies]
 tokio = { version = "1.38.0", features = ["rt", "macros"], default-features = false }
-hwlib = { path = "../hwlib", version = "0.1.0" }
+hwlib = { path = "../hwlib" }
 serde_json = "~1.0.0"
 anyhow = "~1.0.0"
