--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "API server for working with hardware information from C3"
 authors = []
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
