--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -81,17 +81,12 @@ jobs:
     - name: Download dependencies
       run: |
         set -xeu
-        sudo apt update
+        sudo DEBIAN_FRONTEND=noninteractive apt -y update
         sudo DEBIAN_FRONTEND=noninteractive apt install -y \
-          debhelper \
-          devscripts \
           sbuild \
           schroot \
           debootstrap \
-          jq \
-          mmdebstrap \
-          uidmap \
-          sbuild-debian-developer-setup \
+          ubuntu-dev-tools \
           dh-cargo \
           pkg-config \
           libssl-dev
@@ -110,23 +105,11 @@ jobs:
     - name: Setup sbuild and build the package
       run: |
         set -xeu
-        mkdir -p ~/.cache/sbuild
-        echo
-        mmdebstrap --variant=buildd --components=main,restricted,universe oracular ~/.cache/sbuild/oracular-amd64.tar.zst
 
-        echo "Running sbuild-debian-developer-setup"
-        sudo sbuild-debian-developer-setup
         sudo sbuild-adduser $USER
-        newgrp sbuild
-        echo "Creating ~/.sbuildrc"
-        cat <<'EOF' >> ~/.sbuildrc
-        $chroot_mode = 'unshare';
-        $run_autopkgtest = 0;
-        $autopkgtest_root_args = '';
-        $autopkgtest_opts = [ '--apt-upgrade', '--', 'unshare', '--release', '%r', '--arch', '%a' ];
-        EOF
-        sudo sbuild-update -udcar u
-        schroot -l | grep sbuild
+        cp /usr/share/doc/sbuild/examples/example.sbuildrc /home/$USER/.sbuildrc
+
+        sg sbuild -c "mk-sbuild oracular"
 
         PACKAGE_DSC=$(find ../ -name "*.dsc" | head -n 1)
         if [ -z "$PACKAGE_DSC" ]; then
@@ -134,5 +117,5 @@ jobs:
           exit 1
         fi
         echo "Running sbuild for $PACKAGE_DSC"
-        sbuild $PACKAGE_DSC -d oracular -v
+        sg sbuild -c "sbuild $PACKAGE_DSC -d oracular -v --resolve-alternatives --no-clean-source --no-run-lintian"
     - run: lintian --pedantic --verbose
