Add step to archive debs built on CI
Those debs can be used in steps in the CI itself, and are made
available as artifacts for download/future use.

Signed-off-by: Renan Rodrigo <renanrodrigo@canonical.com>

--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -118,4 +118,12 @@ jobs:
         fi
         echo "Running sbuild for $PACKAGE_DSC"
         sg sbuild -c "sbuild $PACKAGE_DSC -d oracular -v --resolve-alternatives --no-clean-source --no-run-lintian"
+
+        mv *.deb '${{ runner.temp }}'
     - run: lintian --pedantic --verbose
+    - name: Archive artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: ci-debs-oracular
+        path: '${{ runner.temp }}/*.deb'
+        retention-days: 3
