--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -87,6 +87,7 @@ jobs:
           schroot \
           debootstrap \
           ubuntu-dev-tools \
+          distro-info \
           dh-cargo \
           pkg-config \
           libssl-dev
