--- a/client/debian/control
+++ b/client/debian/control
@@ -42,7 +42,7 @@ Package: hwctl
 Architecture: amd64
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: Command-line tool for checking Ubuntu hardware certification status - Rust source code
+Description: CLI for checking Ubuntu hardware certification status - Rust source code
  A command-line interface that checks whether your hardware has been certified
  for use with Ubuntu. It uses the hwlib library to collect system information
  and query Ubuntu's Hardware Certification database.
